<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/freesia"/>

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connectTxt"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTxt"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
         />

    <Button
        android:id="@+id/connexionBtn"
        android:layout_width="160dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTxt"
        android:background="@color/colorButton"
        android:text="@string/connect"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/inscriptionBtn"
        android:layout_width="160dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/passwordTxt"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/register"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/connectTxt"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:text="@string/connectTitle"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

</RelativeLayout>