<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    >

    <ImageView
        android:id="@+id/imageEdit"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/prendrePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageEdit"
        android:background="@color/colorButton"
        android:text="@string/prendre_photo"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/textPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prendrePhoto"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/description_photo" />

    <Button
        android:id="@+id/createPhotoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textPhoto"
        android:background="@color/colorButton"
        android:text="@string/ajouter_photo"
        android:textColor="@android:color/background_light" />
</RelativeLayout>